Added BTC Price

--- a/neofetch.conf
+++ b/neofetch.conf
@@ -39,7 +39,9 @@ print_info() {
     prin "New mail" "$(cat /var/mail/d00m4n | grep -i Message-Id | wc -l)"
     prin "Last login" "$(lastlog -u $USER | tail -n +2 | sed 's/ \{2,\}/;/g' | cut -d ';' -f 4)"
     prin " └ From" "$(lastlog -u $USER | tail -n +2 | sed 's/ \{2,\}/;/g' | cut -d ';' -f 3)"
-    # info cols
+    prin "BTC" "$((curl -s  https://api.coindesk.com/v1/bpi/currentprice.json | jq '.bpi.USD.rate ') | tr -d '\"' | sed 's/\./X/g' | sed 's/,/./g' | sed 's/X/,/g') USDT"
+
+	 # info cols
 }
 
 # Title
