Removed title, user and computer is showed at prompt removed local IP, same as title

--- a/neofetch.conf
+++ b/neofetch.conf
@@ -1,8 +1,8 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info title
-    info underline
+    #info title
+    #info underline
 
     info "OS" distro
     info "Host" model
@@ -22,7 +22,7 @@ print_info() {
     info "Memory" memory
     info "Disk" disk /sda1
     info "Uptime" uptime
-    info "local_ip" local_ip
+    # info "local_ip" local_ip
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     # info "Battery" battery
