Change btc curl get adaptiong to coindesk new API

--- a/neofetch.conf
+++ b/neofetch.conf
@@ -39,7 +39,8 @@ print_info() {
     prin "New mail" "$(cat /var/mail/d00m4n | grep -i Message-Id | wc -l)"
     prin "Last login" "$(lastlog -u $USER | tail -n +2 | sed 's/ \{2,\}/;/g' | cut -d ';' -f 4)"
     prin " └ From" "$(lastlog -u $USER | tail -n +2 | sed 's/ \{2,\}/;/g' | cut -d ';' -f 3)"
-    prin "BTC" "$((curl -s  https://api.coindesk.com/v1/bpi/currentprice.json | jq '.bpi.USD.rate ') | tr -d '\"' | sed 's/\./X/g' | sed 's/,/./g' | sed 's/X/,/g') USDT"
+    prin "BTC" "$(curl -s -X GET "https://data-api.coindesk.com/index/cc/v1/latest/tick?market=cadli&instruments=BTC-USDC&apply_mapping=true" -H "Accept: application/json" | jq ".Data.\"BTC-USDC\".VALUE | floor") USD"
+
 
 	 # info cols
 }
@@ -871,3 +872,4 @@ background_color=
 # Default: 'off'
 # Values: 'on', 'off'
 stdout="off"
+
